tests/assignment/grouping.lox
var a = "a";
// error
(a) = "value";
